# Dental_014

./: .ci_trigger  .gitignore  ARCHITECTURE_PROPOSAL.md  BENCHMARK_REPORT.md  README.md  TRAINING_INSTRUCTIONS.md  TRAINING_REPORT.md  app.py  development_log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: work-packet-state.md
scripts/: eval.py  generate_pseudo_masks.py  prepare_brar_dataset.py  train.py  train_rf.py  train_unet.py
src/dental_014/: dataset.py  inference.py  loss.py  model.py  morphology_analyzer.py  multitask_model.py  unet_dataset.py  unet_model.py
