[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dental_014"
version = "0.1.0"
description = "Osteoporosis Risk Screening using Mandibular Cortical Bone"
authors = [{name = "Hyunchan An"}]
dependencies = [
    "torch",
    "torchvision",
    "streamlit",
    "opencv-python",
    "pillow",
    "numpy",
    "pandas",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]
